--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="height:100%">
 <head>
   <meta charset="utf-8">
   <title>ShoppingCartApp</title>
@@ -19,7 +19,7 @@
   <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="height:100%;">
   <app-root></app-root>
 </body>
 </html>  
